--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,36 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  min-height: 100vh;
+  color: #802bb1;
+  box-sizing: border-box;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 6vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #802bb1;
+  box-shadow: 2px  1px rgba(128, 128, 128,0.3);
+}
+.App-header h5{
+  margin: 2%;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #802bb1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebe9eb;
+  width: 90%;
 }
+
